<resources>
    <string name="app_name">اطلاعات بازار املاک ایران</string>

    <string-array name="sell_or_rent">
        <item>اجاره</item>
        <item>فروش</item>
    </string-array>

    <string-array name="radius">
        <item>500</item>
        <item>1000</item>
        <item>1500</item>
        <item>2000</item>
    </string-array>


    <string name="title_activity_maps">Map</string>
    <string name="about_us_content">\tدفتر برنامه‌ريزي و اقتصاد مسكن با پيشينه بالغ بر سه دهه فعاليت، يكي از دفاتر حوزه معاونت مسكن و ساختمان وزارت راه و شهرسازي مي‌باشد. از مهمترين وظايف اين دفتر مي‌توان به برنامه‌ريزي، هدايت و نظارت بر تأمين و توسعه مسكن، نظارت عاليه بر تهيه و تحقق برنامه‌ها و طرح‌هاي توليد مسكن، مطالعه و بررسي مستمر نيازمندي‌هاي مسكن شهري، تهيه برنامه‌هاي كوتاه‌مدت، ميان‌مدت و بلندمدت در بخش زمين و مسكن، برنامه‌ريزي و تجهيز منابع به منظور تأمين مسكن براي گروه‌هاي نيازمند، بسترسازي در جهت ايجاد هماهنگي بين برنامه‌هاي مسكن و برنامه‌هاي توسعه شهري در چارچوب آمايش سرزمين، مطالعه و بررسي درخصوص شاخص‌هاي بهره‌وري در بخش مسكن، بررسي مستمر اثرات متقابل مسكن و اقتصاد كلان، جمع‌آوري، تهيه، پردازش و ساماندهي و تحليل آمار و اطلاعات بخش مسكن، فراهم‌كردن زمينه لازم براي تشكيل بانك اطلاعاتي زمين و مسكن، مطالعه و بررسي و تهيه طرح‌هاي مورد نياز در راستاي تنظيم بازار و انطباق بين عرضه و تقاضا، سياست‌گذاري، جلب مشاركت و حمايت از مؤسسات داخلي و خارجي، سازندگان مسكن، تعاوني‌هاي مسكن و شركت‌هاي پس‌انداز و تأمين مسكن و سرمايه‌گذاري در بخش مسكن، تهيه، تدوين و ارزيابي شاخص‌هاي اصلي بخش مسكن، تدوين الگوي مصرف مسكن و هدايت برنامه‌ها بر اساس آن، مطالعات تطبيقي وضعيت مسكن در كشورهاي مختلف و نهادهاي بين‌المللي و … اشاره نمود.</string>
    <string name="guide_title">راهنمای استفاده از نرم افزار</string>
    <string name="guide_cotent1">برای دریافت اطلاعات به دو طریق می توانید عمل نمایید</string>
    <string name="guide_cotent2">"-1\tجستجو براساس اطلاعات ورودی در این روش با ورودی به صفحه \"جستجوی اطلاعات\" و تعیین نوع معامله ، انتخاب منطقه و سایر موارد و سپس انتخاب دکمه جستجو، نتیجه اطلعات وارد شده برای شما نمایش داده می شود.  "</string>
    <string name="guide_cotent3">"-2\tجستجو براساس موقعیت جغرافیایی در صورتیکه بخواهید اطلاعات نزدیک محل قرار گیری خود و یا موقعیت دیگری را دریافت نمایید، کافی است که به صفحه \"اطلاعات اطراف شما\" رفته مرکز جغرافیایی را با کلیک بر روی نقشه انتخاب و سپس از لیست انتخابی بالای صفحه، شعاع مد نظر را انتخاب و سپس دکمه جستجو را انتخاب نمایید. "</string>
    <string name="guide_cotent4">مرور اطلاعات</string>
    <string name="guide_cotent5">\tپس جستجو، فرم مشخصات قراردادها برای شما به نمایش در می آید. جهت ملاحظه اطلاعات کامل قرارداد بر روی آن کلیک و مشخصات کامل و موقعیت جغرافیایی ملک را بر روی نقشه می توانید مشاهده نمایید.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_developer_content">"شرکت رایان اندیشه نصر در سال ۱۳۸۶ با هدف کاربردی نمودن سامانه های انفورماتيک و ساير خدمات وابسته و خصوصاً ارائه راه حلهاي جامع در زمينه سيستمهاي ژئوماتيک و ارتباط مردمی تأسيس گرديده است. این شرکت مجری استقرار  سامانه های 137 شهرداری، 194 گاز، مرکز تماس و ضبط مکالمه  امداد و حوادث، GIS و ردیاب و اتوماسیون سفرهای شهری شامل پیک، آژانس، پخش و سرویس مدرسه و... می باشد."</string>
</resources>