<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".hmi.Fragments.GuideFragment">
    <RelativeLayout
        android:id="@+id/about_us_fragment_toolbar"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:id="@+id/guide_back_btn"
            android:src="@drawable/ic_down"
            android:rotation="90"
            android:tint="@color/colorPrimaryDark"
            android:layout_width="45dp"
            android:layout_height="45dp"/>
        <TextView
            android:layout_marginEnd="20dp"
            android:textSize="26sp"
            android:textColor="@color/colorAccent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="end"
            android:text="راهنما"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <androidx.cardview.widget.CardView
        android:layout_below="@id/about_us_fragment_toolbar"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ScrollView
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:text="@string/guide_title"
                    android:textSize="26sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <com.rayanandishehnasr.hmi.Utils.TextJustification.TextViewEx
                    android:id="@+id/guide_cotent1"
                    android:layout_marginTop="5dp"
                    android:text="@string/guide_cotent1"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <com.rayanandishehnasr.hmi.Utils.TextJustification.TextViewEx
                    android:id="@+id/guide_cotent2"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:textSize="18sp"
                    android:text="@string/guide_cotent2"
                    android:textColor="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <com.rayanandishehnasr.hmi.Utils.TextJustification.TextViewEx
                    android:id="@+id/guide_cotent3"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:textSize="18sp"
                    android:text="@string/guide_cotent3"
                    android:textColor="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/guide_cotent4"
                    android:textSize="22sp"
                    android:textColor="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <com.rayanandishehnasr.hmi.Utils.TextJustification.TextViewEx
                    android:id="@+id/guide_cotent5"
                    android:textSize="18sp"
                    android:text="@string/guide_cotent5"
                    android:textColor="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</RelativeLayout>